--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >-                        # used by seo meta and the atom feed
   and focuses on text presentation.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ''
+url: 'https://harshityadav95.github.io'
 
 github:
   username: github_username             # change to your github username
