--- a/_config.yml
+++ b/_config.yml
@@ -11,40 +11,40 @@ baseurl: ''
 lang: en-US
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone: Asia/Shanghai
+timezone: Asia/Kolkata
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # --------------------------
-title: Chirpy                          # the main title
+title: Harshit Yadav                          # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline: End of Line.   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, portfolio, sidebar,
-  bootstrap Jekyll theme with responsive web design
-  and focuses on text presentation.
+  anything and everything from machine learning
+  data sceince, projects & progress, SolvePao 
+  Tron Legacy ,system design and maybe food ?
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: 'https://harshityadav95.github.io'
 
 github:
-  username: github_username             # change to your github username
+  username: harshityadav95             # change to your github username
 
 twitter:
-  username: twitter_username            # change to your twitter username
+  username: harshityadav95            # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@doamin.com             # change to your email address
+  name: Harshit Yadav
+  email: harshityadav@outlook.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username      # change to your twitter homepage
-    - https://github.com/username       # change to your github homepage
+    - https://twitter.com/harshityadav95      # change to your twitter homepage
+    - https://github.com/harshittadav95       # change to your github homepage
     # Uncomment below to add more social links
-    # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    - https://www.facebook.com/harshityadav95
+    - https://www.linkedin.com/in/harshityadav95
 
 google_site_verification: google_meta_tag_verification # change to your verification string
 # --------------------------
@@ -67,7 +67,7 @@ google_analytics:
 #     light  - Use the light color scheme
 #     dark   - Use the dark color scheme
 #
-theme_mode:   # [light|dark]
+theme_mode:   light
 
 # The CDN endpoint for images.
 # Notice that once it is assigned, the CDN url
@@ -77,14 +77,14 @@ theme_mode:   # [light|dark]
 img_cdn: ''
 
 # the avatar on sidebar, support local or CORS resources
-avatar: https://cdn.jsdelivr.net/gh/cotes2020/chirpy-images/commons/avatar.jpg
+avatar: https://avatars.githubusercontent.com/u/14792490?v=4
 
 # boolean type, the global switch for ToC in posts.
 toc: true
 
 disqus:
-  comments: false  # boolean type, the global switch for posts comments.
-  shortname: ''    # Fill with your Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
+  comments: true  # boolean type, the global switch for posts comments.
+  shortname: 'harshityadav95'    # Fill with your Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
 
 paginate: 10
 
