--- a/_config.yml
+++ b/_config.yml
@@ -3,24 +3,27 @@
 # Import the theme
 theme: jekyll-theme-chirpy
 
-# Only if your site type is GitHub Project sites and doesn't have a custom domain,
-# change below value to '/projectname'.
+# Change the following value to '/PROJECT_NAME' ONLY IF your site type is GitHub Pages Project sites
+# and doesn't have a custom domain.
 baseurl: ''
 
-# the HTML language tag › https://www.w3.org/International/questions/qa-choosing-language-tags
-lang: en-US
+# The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
+# If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
+# otherwise, the layout language will use the default value of 'en'.
+lang: en
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone: Asia/Kolkata
+timezone: Asia/Shanghai
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
-# --------------------------
+# ↓ --------------------------
+
 title: Harshit Yadav                          # the main title
 
-tagline: End of Line.   # it will display as the sub-title
+tagline: End of Line .  # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  anything and everything from machine learning
+   anything and everything from machine learning
   data sceince, projects & progress, SolvePao 
   Tron Legacy ,system design and maybe food ?
 
@@ -47,7 +50,9 @@ social:
     - https://www.linkedin.com/in/harshityadav95
 
 google_site_verification: google_meta_tag_verification # change to your verification string
-# --------------------------
+
+# ↑ --------------------------
+
 
 google_analytics:
   id: 'G-7RS3HK09CR'              # fill in your Google Analytics ID
@@ -74,7 +79,7 @@ theme_mode:   light
 # will be added to all image (site avatar & posts' images) paths starting with '/'
 #
 # e.g. 'https://cdn.com'
-img_cdn: ''
+img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
 avatar: https://avatars.githubusercontent.com/u/14792490?v=4
@@ -154,7 +159,7 @@ exclude:
   - LICENSE
   - gulpfile.js
   - node_modules
-  - '*.json'
+  - package.json
 
 jekyll-archives:
   enabled: [categories, tags]
@@ -164,3 +169,4 @@ jekyll-archives:
   permalinks:
     tag: /tags/:name/
     category: /categories/:name/
+
