Theme Update Major

--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,14 @@
 !.git*
 !.editorconfig
 !.nojekyll
+!.travis.yml
+!.husky
+!.commitlintrc.json
+!.versionrc.json
 
 # bundler cache
 _site
 vendor
-Gemfile.lock
 
 # rubygem
 *.gem
