--- a/_data/share.yml
+++ b/_data/share.yml
@@ -13,7 +13,7 @@ platforms:
   -
     type: Telegram
     icon: "fab fa-telegram"
-    link: "https://telegram.me/share?text=TITLE&url=URL"
+    link: "https://t.me/share/url?url=URL&text=TITLE"
 
   # Uncomment below if you need to.
   # -
@@ -25,4 +25,3 @@ platforms:
   #   type: Weibo
   #   icon: "fab fa-weibo"
   #   link: "http://service.weibo.com/share/share.php?title=TITLE&url=URL"
-
