--- a/_config.yml
+++ b/_config.yml
@@ -97,10 +97,10 @@ comments:
     issue_term: # < url | pathname | title | ...>
   # Giscus options › https://giscus.app
   giscus:
-    repo: # <gh-username>/<repo>
-    repo_id:
-    category:
-    category_id:
+    repo: harshityadav95/harshityadav95.github.io
+    repo_id: 379917694
+    category: posts
+    category_id: 
     mapping: # optional, default to 'pathname'
     input_position: # optional, default to 'bottom'
     lang: # optional, default to the value of `site.lang`
