--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,7 +1,9 @@
 name: "Test Build"
 on:
   push:
-    branches: ["*"]
+    branches:
+      - '*'
+      - '!main'
   pull_request:
     branches: ["*"]
 
