--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,9 +1,7 @@
 name: "Test Build"
 on:
   push:
-    branches:
-      - '*'
-      - '!main'
+    branches: ["*"]
   pull_request:
     branches: ["*"]
 
