--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,9 +1,9 @@
 name: "Test Build"
 on:
   push:
-    branches: ["*"]
+    branches: []
   pull_request:
-    branches: ["*"]
+    branches: []
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
