--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -2,7 +2,8 @@ name: "Build and Deploy"
 on:
   push:
     branches:
-      - '*'
+      - main
+      - master
     paths-ignore:
       - .gitignore
       - README.md
