--- a/_data/share.yml
+++ b/_data/share.yml
@@ -21,4 +21,4 @@ platforms:
   #
   - type: Weibo
     icon: "fab fa-weibo"
-    link: "http://service.weibo.com/share/share.php?title=TITLE&url=URL"
+    link: "https://service.weibo.com/share/share.php?title=TITLE&url=URL"
